Refined ExerciseService and implemented test cases